# pyspace

./: README.md  mise.toml  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/instructions/: code.instructions.md  test.instructions.md
.github/workflows/: lint-typecheck.yml  quality-test.yml
app/: llm_call.py  main.py
mcp_server/: sample_client.py  sample_server.py
src/: main.py
tests/app/: test_llm_call.py
tests/mcp_server/: test_get_address_by_postal_code.py
